[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiomqtt"
description = "The idiomatic asyncio MQTT client"
version = "3.0.0-alpha.1"
requires-python = ">=3.11,<4.0"
authors = [
    { name = "Frederik Aalund", email = "fpa@sbtinstruments.com" },
    { name = "Felix Böhm", email = "f@bo3hm.com" },
    { name = "Jonathan Plasse", email = "jonathan.plasse@live.fr" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = { file = "LICENSE" }
dependencies = ["mqtt5~=0.4.0"]

[project.urls]
"Source" = "https://github.com/empicano/aiomqtt"
"Documentation" = "https://github.com/empicano/aiomqtt/tree/main/docs"
"Issue tracker" = "https://github.com/empicano/aiomqtt/issues"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=7.0.0",
    "mypy>=1.10.0,<2.0.0",
    "ruff>=0.13.1",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D105",    # undocumented-magic-method
    "D107",    # undocumented-public-init
    "ERA001",  # commented-out-code
    "C901",    # complex-structure
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "FIX002",  # line-contains-todo
    "TD003",   # missing-todo-link
    "COM812",  # missing-trailing-comma
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "INP001",  # implicit-namespace-package
    "PLR2004", # magic-value-comparison
    "S101",    # assert
    "S106",    # hardcoded-password-func-arg
    "SLF001",  # private-member-access
]

[tool.mypy]
python_version = "3.11"
strict = true
show_column_numbers = true
show_error_context = true
pretty = true

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = ["network: Requires network access"]
xfail_strict = true
